highcontrast: fix non-square toolbar buttons

--- a/themes/HighContrast/gtk-3.0/gtk-widgets.css
+++ b/themes/HighContrast/gtk-3.0/gtk-widgets.css
@@ -501,6 +501,7 @@ GtkComboBox .button {
 
 .toolbar .button {
     background-color: transparent;
+    padding: 1px;
 }
 
 .toolbar .button:insensitive {
